--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "start": "npm run build && npm run dev"
+    "preview": "vite preview --host 0.0.0.0 --port $PORT",
+    "start": "npm run build && vite preview --host 0.0.0.0 --port $PORT"
   },
   "dependencies": {
     "@coreui/coreui": "^5.1.2",
